--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <th>Costo promedio</th>
     </tr>
     <tr>
-      <td>0</td>
+      <td>{{ day[0] }}</td>
       <td><input type="number" name="myDecimal" ng-model="provider" ng-change="changeValue()" /></td>
       <td>{{ provider }}</td>
       <td>{{ demand }}</td>
@@ -40,37 +40,37 @@
 
     </tr>
     <tr>
-      <td>1</td>
+      <td>{{ day[1] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>2</td>
+      <td>{{ day[2] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>3</td>
+      <td>{{ day[3] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>4</td>
+      <td>{{ day[4] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>5</td>
+      <td>{{ day[5] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>6</td>
+      <td>{{ day[6] }}</td>
       <td>0</td>
       <td>shutt</td>
     </tr>
     <tr>
-      <td>7</td>
+      <td>{{ day[7] }}</td>
       <td></td>
       <td>shutt</td>
     </tr>
