more changes in values

--- a/index.html
+++ b/index.html
@@ -42,37 +42,100 @@
     <tr>
       <td>{{ day[1] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[1] }}</td>
+      <td>{{ demandArr[1] }}</td>
+      <td>{{ salesFn(demandArr[1], finalnventoryArr[1]) }}</td>
+      <td><p>:D </p></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[2] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[2] }}</td>
+      <td>{{ demandArr[2]  }}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[3] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[3] }}</td>
+      <td>{{ demandArr[3] }}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[4] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[4] }}</td>
+      <td>{{ demandArr[4] }}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[5] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[5] }}</td>
+      <td>{{ demandArr[5] }}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[6] }}</td>
       <td>0</td>
-      <td>shutt</td>
+      <td>{{ finalnventoryArr[6] }}</td>
+      <td>{{ demandArr[6] }}</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
     <tr>
       <td>{{ day[7] }}</td>
+      <td>{{ finalnventoryArr[7] }}</td>
+      <td>{{ demandArr[7] }}</td>
       <td></td>
-      <td>shutt</td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+      <td></td>
+
     </tr>
 
   </table>
